# AdvancedPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  endbackTest.cpp  main.cpp
qml/: HomePage.qml  Main.qml
qml/components/: ControlPanel.qml  CustomProgressBar.qml  NotificationToast.qml  PlaylistPanel.qml  SettingsDialog.qml  SpeedControl.qml  VolumeControl.qml
src/audio/: AudioOutput.cpp  AudioOutput.h  AudioResampler.cpp  AudioResampler.h  SoundTouchProcessor.cpp  SoundTouchProcessor.h
src/core/: AudioDecodeThread.cpp  AudioDecodeThread.h  AudioRenderThread.cpp  AudioRenderThread.h  DecodeContext.cpp  DecodeContext.h  DemuxContext.h  DemuxThread.cpp  DemuxThread.h  LockFreeAudioFrameQueue.cpp  LockFreeAudioFrameQueue.h  LockFreePacketQueue.cpp  LockFreePacketQueue.h  LockFreeRingBuffer.h  LockFreeVideoFrameQueue.cpp  LockFreeVideoFrameQueue.h  MediaPlayer.cpp  MediaPlayer.h  PlaybackController.cpp  PlaybackController.h  RenderContext.h  VideoDecodeThread.cpp  VideoDecodeThread.h  VideoRenderThread.cpp  VideoRenderThread.h
src/decoder/: DecoderInterface.h  HardwareDecoder.cpp  HardwareDecoder.h  SoftwareDecoder.cpp  SoftwareDecoder.h
src/ui/: NetworkPlaylistModel.cpp  NetworkPlaylistModel.h  PlaylistModel.cpp  PlaylistModel.h  SettingsManager.cpp  SettingsManager.h
src/utils/: FileScanner.cpp  FileScanner.h  ScreenshotCapture.cpp  ScreenshotCapture.h  Utils.js
src/video/: OpenGLVideoConverter.cpp  OpenGLVideoConverter.h  VideoOutput.cpp  VideoOutput.h
